--- a/problem2/src/App.css
+++ b/problem2/src/App.css
@@ -1,8 +1,41 @@
+:root {
+  --accent-color: #00cf26
+}
+
 .main-container {
   padding: 24%;
 }
+
 .conversion-form {
   display: flex;
   flex-direction: column;
+  gap: 10px;
+}
 
+.conversion-form__interaction-block {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+}
+
+.conversion-form__label {
+  grid-column: 1 / 3;
+  font-size: 1.2rem;
+}
+
+.conversion-form__input {
+  height: 30px;
+  border-radius: 10px;
+  border: 2px solid var(--accent-color)
+}
+
+.conversion-form__btn {
+  width: 50%;
+  height: 30px;
+  border-radius: 10px;
+  border: 0;
+  color: white;
+  background-color: var(--accent-color);
+  font-size: 19px;
+  align-self: center;
 }
